refactoring, fixing type errors
