# backend/src/main/java/com/app/Dto/AddWithdrawMoneyFromGoalDto.java
@@ -1,2 +1,16 @@
-package com.app.Dto;public class AddWithdrawMoneyFromGoalDto {
+package com.app.Dto;
+
+import jakarta.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+public class AddWithdrawMoneyFromGoalDto {
+    @NotNull
+    private double currentAmount;
 }
